# shinkom

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsdown.config.ts  vite.config.js  vitest.config.js
.github/workflows/: main.yml  shinkom.yml  shinkore.yml
browserx-core/: Cargo.toml
browserx-core/src/: helpers.rs  lib.rs  prelude.rs  schema.rs
browserx-core/tests/: integration_tests.rs
demo/: index.html  main.js
demo/css/: main.css  root.css
examples/nextjs-demo/: package-lock.json  package.json
examples/nextjs-shinkom-demo/: package-lock.json  package.json
examples/node-cjs-demo/: index.cjs  package-lock.json  package.json
examples/node-demo/: index.js  package-lock.json  package.json
examples/node-esm-demo/: index.js  package-lock.json  package.json
examples/nuxt-demo/: nuxt.config.ts  package-lock.json  package.json
examples/vite-demo/: index.html  index.js  package-lock.json  package.json
examples/vite-dev-server/: package-lock.json  package.json
examples/webpack-demo/: package.json  (+3 more)
plugins/: copyWasmPlugin.ts  minifyJsonPlugin.ts  tsconfig.json
scripts/: extract-browser-data.ts  extract-compat.ts  extract-usage-data.ts  tsconfig.json
shinkore/: Cargo.toml  LICENSE.md
shinkore/src/: constants.rs  engine.rs  errors.rs  helpers.rs  lib.rs  prelude.rs  preprocess.rs  schema.rs
shinkore/src/compat/: calculate.rs  check.rs  lookup.rs  mod.rs
shinkore/tests/: engine_tests.rs  integration_tests.rs
src/: index.js  inspector.js  shinkom.js
types/: browserx.types.d.ts  browserx.types.ts  inspector.types.d.ts
(+54 files in other folders)
