[package]
name = "shinkore"
version = "0.1.0"
authors = ["OneilNvM <oneil324@outlook.com>"]
description = "A parsing and data processing library for the Shinkom package using WebAssembly"
repository = "https://github.com/OneilNvM/shinkom"
license = "MIT"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
lol_html = "2.7.2"
regex = "1.12.3"
serde = { version = "1.0.228", features = ['derive'] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.149"
version-compare = "0.2.1"
wasm-bindgen = "0.2.114"

[dependencies.web-sys]
version = "0.3"
features = [
    "console"
]
